--- a/requirements.txt
+++ b/requirements.txt
@@ -1,53 +1,12 @@
-# ------------------------------------
-# CORE PYTHON LIBRARIES
-# ------------------------------------
-numpy==1.23.5
-pandas==1.5.3
-scipy==1.10.1
+streamlit
+pandas
+numpy==2.1.3
+scikit-learn==1.4.2
+plotly
+joblib
+statsmodels
+reportlab
+geopandas
+shapely
+requests
 
-# ------------------------------------
-# MACHINE LEARNING / DEEP LEARNING
-# ------------------------------------
-scikit-learn==1.1.3
-tensorflow-cpu==2.11.0  # works with Python 3.10
-keras==2.11.0
-
-# ------------------------------------
-# AUDIO / MUSIC PROCESSING
-# ------------------------------------
-librosa==0.9.2
-soundfile==0.12.1
-pydub==0.25.1
-audioread==3.0.1
-
-# ------------------------------------
-# RECOMMENDER SYSTEMS / VECTOR SEARCH
-# ------------------------------------
-faiss-cpu==1.7.4
-annoy==1.17.1
-
-# ------------------------------------
-# EMOTION & FACE ANALYSIS (OPTIONAL)
-# ------------------------------------
-deepface==0.0.79
-opencv-python==4.7.0.72
-
-# ------------------------------------
-# WEB BACKEND (OPTIONAL, IF USING FASTAPI)
-# ------------------------------------
-fastapi==0.92.0
-uvicorn==0.20.0
-
-# ------------------------------------
-# FRONTEND (STREAMLIT APP)
-# ------------------------------------
-streamlit==1.22.0
-
-# ------------------------------------
-# UTILITIES
-# ------------------------------------
-tqdm==4.65.0
-python-dotenv==1.0.0
-requests==2.28.2
-matplotlib==3.7.0
-seaborn==0.12.2
